[project]
name = "mcp-project-pr-agent-workflow-server"
version = "0.1.0"
description = "Pull Request agent workflow server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "hf-doc-builder>=0.5.0",
    "mcp[cli]>=1.26.0",
    "mdx-truly-sane-lists>=1.3",
    "pathlib>=1.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tomli>=2.4.0",
    "typing>=3.10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.21.0",
]
